Update job title in index.html

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <h1>Welcome to Blossom Oyem’s Website</h1>
-    
+     <p>Senior Machine Learning Engineer | Robotics Enthusiast</p>
 
-    <p>Senior Machine Learning Engineer | Robotics Enthusiast</p>
+    <p>Senior Ready to go | Robotics Enthusiast</p>
     <p>Explore my projects and research below.</p>
 </body>
 </html>
