--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 </head>
 <body>
     <h1>Welcome to Blossom Oyem’s Website</h1>
+    <ul>
+  <li><a href="project1.html">AI Chatbot Project</a></li>
+  <li><a href="project2.html">Smart Bin System</a></li>
+  <li><a href="project3.html">House Price Prediction</a></li>
+</ul>
+
      <p>Senior Machine Learning Engineer | Robotics Enthusiast</p>
 
     <p>Senior Ready to go | Robotics Enthusiast</p>
