Update job title and highlights in index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="logo">BO</div>
         <div>
           <div style="font-weight:800">Blossom Oyem</div>
-          <div style="font-size:13px;color:var(--muted)">Senior Machine Learning Engineer · Robotics</div>
+          <div style="font-size:13px;color:var(--muted)">Machine Learning Engineer · Robotics</div>
         </div>
       </div>
 
@@ -138,14 +138,14 @@
 
           <div style="margin-top:18px;color:var(--muted);font-size:14px">
             <strong>Highlights:</strong>
-            <span style="margin-left:10px">Vision-based assistive robotics • Histopathology AI • Streamlit & full-stack deployment</span>
+            <span style="margin-left:10px">Vision-based assistive robotics • Wheeled Humanoid Firefighter • Streamlit & full-stack deployment</span>
           </div>
         </div>
 
         <div class="hero-right card">
           <div class="avatar">BO</div>
           <div style="font-weight:700;font-size:16px">Blossom Oyem</div>
-          <div style="color:var(--muted);margin-top:6px">Senior Machine Learning Engineer & Robotics Enthusiast</div>
+          <div style="color:var(--muted);margin-top:6px">Machine Learning Engineer & Robotics Enthusiast</div>
 
           <div style="margin-top:12px;color:var(--muted);font-size:13px;text-align:left">
             <strong>Quick links</strong>
@@ -293,9 +293,7 @@
       <div>© <span id="year"></span> Blossom Oyem</div>
       <div class="socials">
         <a href="https://github.com/blossomchi" target="_blank">GitHub</a>
-        <a href="#" target="_blank">LinkedIn</a>
-        <a href="#" target="_blank">Email</a>
-      </div>
+        </div>
     </footer>
 
     <!-- mobile menu -->
