Update meta description for clarity

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Blossom Oyem — AI & Robotics</title>
-  <meta name="description" content="Blossom Oyem — Senior Machine Learning Engineer & Robotics Enthusiast. Projects: AI chatbot, smart bin, house price predictor and more."/>
+  <meta name="description" content="Blossom Oyem — Machine Learning Engineer & Robotics Enthusiast. Projects: AI chatbot, smart bin, house price predictor and more."/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <style>
