--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
         </div>
 
         <div class="hero-right card">
-          <div class="avatar">BO</div>
+          <div class="avatar">
+            <img src="blossom.jpeg" alt="Blossom Oyem" style="width:100%;height:100%;object-fit:cover;border-radius:14px;">
+          </div>
           <div style="font-weight:700;font-size:16px">Blossom Oyem</div>
           <div style="color:var(--muted);margin-top:6px">Machine Learning Engineer & Robotics Enthusiast</div>
 
