--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="logo">BO</div>
         <div>
           <div style="font-weight:800">Blossom Oyem</div>
-          <div style="font-size:13px;color:var(--muted)">Machine Learning Engineer · Robotics</div>
+          <div style="font-size:13px;color:var(--muted)">Machine Learning Engineer · Robotics . Full-stack Developer</div>
         </div>
       </div>
 
@@ -147,7 +147,7 @@
             <img src="blossom.jpeg" alt="Blossom Oyem" style="width:100%;height:100%;object-fit:cover;border-radius:14px;">
           </div>
           <div style="font-weight:700;font-size:16px">Blossom Oyem</div>
-          <div style="color:var(--muted);margin-top:6px">Machine Learning Engineer & Robotics Enthusiast</div>
+          <div style="color:var(--muted);margin-top:6px">Machine Learning Engineer, Full-stack Developer & Robotics Enthusiast</div>
 
           <div style="margin-top:12px;color:var(--muted);font-size:13px;text-align:left">
             <strong>Quick links</strong>
