--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <img src="blossom.jpeg" alt="Blossom Oyem" style="width:100%;height:100%;object-fit:cover;border-radius:14px;">
           </div>
           <div style="font-weight:700;font-size:16px">Blossom Oyem</div>
-          <div style="color:var(--muted);margin-top:6px">Machine Learning Engineer, Full-stack Developer & Robotics Enthusiast</div>
+          
 
           <div style="margin-top:12px;color:var(--muted);font-size:13px;text-align:left">
             <strong>Quick links</strong>
@@ -240,7 +240,7 @@
         <div class="two-col">
           <div class="card">
             <h4 style="margin-top:0">Bio</h4>
-            <p style="color:var(--muted);margin:8px 0">I’m a self-funded engineer from Nigeria focused on building AI and robotics solutions for resource-limited settings. My research interests include computer vision, reinforcement learning for robotics, and deployable ML systems.</p>
+            <p style="color:var(--muted);margin:8px 0">I’m a self-funded engineer from Nigeria focused on building AI and robotics solutions for resource-limited settings. My research interests include computer vision, reinforcement learning for robotics, full-stack development, and deployable ML systems.</p>
             <p style="margin:8px 0;color:var(--muted)"><strong>Available for:</strong> Research collaborations, mentoring, & consulting.</p>
           </div>
 
