--- a/index.html
+++ b/index.html
@@ -142,24 +142,28 @@
           </div>
         </div>
 
-        <div class="hero-right card">
-          <div class="avatar">
-            <img src="blossom.jpeg" alt="Blossom Oyem" style="width:100%;height:100%;object-fit:cover;border-radius:14px;">
-          </div>
-          <div style="font-weight:700;font-size:16px">Blossom Oyem</div>
-          
 
-          <div style="margin-top:12px;color:var(--muted);font-size:13px;text-align:left">
-            <strong>Quick links</strong>
-            <ul style="margin:8px 0 0 14px;color:var(--muted)">
-              <li><a href="project1.html">AI Chatbot Project</a></li>
-              <li><a href="project2.html">Smart Bin System</a></li>
-              <li><a href="project3.html">House Price Prediction</a></li>
-              <li><a href="project4.html">Gesture Recognition</a></li>
-              <li><a href="project5.html">Centralized Food Ordering</a></li>
-            </ul>
+          <div class="hero-right card" style="padding:0; overflow:hidden; position:relative; text-align:center;">
+          <img src="blossom.jpeg" alt="Blossom Oyem" 
+           style="width:100%; height:100%; object-fit:cover; display:block;">
+
+          <div style="
+            position:absolute;
+            bottom:0;
+            left:0;
+            width:100%;
+            background:rgba(0,0,0,0.55);
+            color:#fff;
+            padding:10px 0;
+            font-weight:700;
+            font-size:18px;
+            letter-spacing:0.5px;
+          ">
+            Blossom Oyem
           </div>
         </div>
+
+       
       </section>
 
       <section id="projects" class="section">
