--- a/index.html
+++ b/index.html
@@ -144,24 +144,26 @@
 
 
           <div class="hero-right card" style="padding:0; overflow:hidden; position:relative; text-align:center;">
-          <img src="blossom.jpeg" alt="Blossom Oyem" 
-           style="width:70%; height:70%; object-fit:cover; display:block;">
+  <img src="blossom.jpeg" alt="Blossom Oyem"
+       style="width:80%; height:auto; object-fit:cover; display:block; margin:0 auto; border-radius:12px;">
 
-          <div style="
-            position:absolute;
-            bottom:0;
-            left:0;
-            width:100%;
-            background:rgba(0,0,0,0.55);
-            color:#fff;
-            padding:10px 0;
-            font-weight:700;
-            font-size:18px;
-            letter-spacing:0.5px;
-          ">
-            Blossom Oyem
-          </div>
-        </div>
+  <div style="
+    position: absolute;
+    bottom:10px;
+    left:50%;
+    transform:translateX(-50%);
+    background:rgba(0,0,0,0.55);
+    color:#fff;
+    padding:8px 14px;
+    font-weight:700;
+    font-size:18px;
+    border-radius:8px;
+    letter-spacing:0.5px;
+  ">
+    Blossom Oyem
+  </div>
+</div>
+
 
        
       </section>
