--- a/index.html
+++ b/index.html
@@ -32,16 +32,62 @@
     a:hover{text-decoration:underline}
 
     /* Layout */
-    .container{max-width:1100px;margin:0 auto;padding:28px;}
-    header{display:flex;align-items:center;justify-content:space-between;padding:14px 0}
-    .brand{display:flex;gap:12px;align-items:center}
-    .logo{
-      width:56px;height:56px;border-radius:10px;background:linear-gradient(135deg,#06b6d4,#3b82f6);
-      display:inline-flex;align-items:center;justify-content:center;font-weight:800;color:#021124;font-size:20px;
-      box-shadow:0 6px 18px rgba(3,7,18,0.6);
-    }
-    nav{display:flex;gap:20px;align-items:center}
-    .btn-ghost{border:1px solid rgba(255,255,255,0.06);padding:8px 12px;border-radius:8px;font-weight:600;background:transparent;color:var(--muted)}
+    
+    .container {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 28px;}
+      header {
+  display: flex;
+  align-items: flex-start; /* lift nav higher */
+  justify-content: space-between;
+  padding: 8px 0 0 0; /* reduced bottom padding */
+  margin-top: 6px; /* raised slightly upward */
+  position: sticky;
+  top: 0;
+  background: linear-gradient(180deg, rgba(15,23,36,0.95) 0%, rgba(8,16,26,0.9) 100%);
+  z-index: 10;
+  backdrop-filter: blur(10px);
+}
+
+.brand {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
+
+   .logo {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  background: linear-gradient(135deg,#06b6d4,#3b82f6);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 800;
+  color: #021124;
+  font-size: 18px;
+  box-shadow: 0 6px 18px rgba(3,7,18,0.6);
+}
+
+
+    nav {
+  display: flex;
+  gap: 18px;
+  align-items: center;
+  margin-top: 4px; /* fine-tune nav vertical alignment */
+}
+
+.btn-ghost {
+  border: 1px solid rgba(255,255,255,0.06);
+  padding: 8px 12px;
+  border-radius: 8px;
+  font-weight: 600;
+  background: transparent;
+  color: var(--muted);
+  font-size: 14px;
+}
+    
     .hero{
       display:grid;grid-template-columns:1fr 420px;gap:32px;align-items:center;margin-top:28px;
     }
@@ -81,8 +127,28 @@
     ul.skills{list-style:none;padding:0;margin:0;display:flex;flex-wrap:wrap;gap:8px}
     ul.skills li{background:var(--glass);padding:8px 10px;border-radius:8px;color:var(--muted);font-weight:600;font-size:13px}
 
-    footer{margin-top:48px;padding:22px 0;border-top:1px solid rgba(255,255,255,0.02);color:var(--muted);display:flex;justify-content:space-between;align-items:center}
-    .socials a{margin-left:12px;color:var(--muted)}
+   /* FOOTER (smaller and neater) */
+footer {
+  margin-top: 48px;
+  padding: 16px 0;
+  border-top: 1px solid rgba(255,255,255,0.02);
+  color: var(--muted);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 11px; /* smaller text */
+  opacity: 0.85;
+}
+   socials a {
+  margin-left: 10px;
+  color: var(--muted);
+  font-size: 11px;
+  transition: color 0.2s;
+}
+
+.socials a:hover {
+  color: var(--accent);
+}
 
     /* responsive */
     @media (max-width:980px){
@@ -108,9 +174,9 @@
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo">BO</div>
+        <div class="logo">CBO</div>
         <div>
-          <div style="font-weight:800">Blossom Oyem</div>
+          <div style="font-weight:800">Coding with Blossom</div>
           <div style="font-size:13px;color:var(--muted)">Machine Learning Engineer · Robotics . Full-stack Developer</div>
         </div>
       </div>
@@ -144,8 +210,8 @@
 
 
           <div class="hero-right card" style="padding:0; overflow:hidden; position:relative; text-align:center;">
-  <img src="blossom.jpeg" alt="Blossom Oyem"
-       style="width:80%; height:auto; object-fit:cover; display:block; margin:0 auto; border-radius:12px;">
+           <img src="blossom.jpeg" alt="Blossom Oyem"
+            style="width:80%; height:auto; object-fit:cover; display:block; margin:0 auto; border-radius:12px;">
 
   <div style="
     position: absolute;
