--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ footer {
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo">CBO</div>
+        <div class="logo">B</div>
         <div>
           <div style="font-weight:800">Coding with Blossom</div>
           <div style="font-size:13px;color:var(--muted)">Machine Learning Engineer · Robotics . Full-stack Developer</div>
@@ -226,7 +226,7 @@ footer {
     border-radius:8px;
     letter-spacing:0.5px;
   ">
-    Blossom Oyem
+    Chinyere Blossom Oyem
   </div>
 </div>
 
