--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@ footer {
       <nav>
         <a href="#projects" class="btn-ghost">Projects</a>
         <a href="#about" class="btn-ghost">About</a>
+        <a href="#about" class="btn-ghost">Professional Bodies</a>
         <a href="#contact" class="btn-ghost">Contact</a>
         <a href="https://github.com/blossomchi" target="_blank" class="btn-ghost">GitHub</a>
       </nav>
