--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ footer {
       <nav>
         <a href="#projects" class="btn-ghost">Projects</a>
         <a href="#about" class="btn-ghost">About</a>
-        <a href="#about" class="btn-ghost">Professional Bodies</a>
+        <a href="#bodies" class="btn-ghost">Professional Bodies</a>
         <a href="#contact" class="btn-ghost">Contact</a>
         <a href="https://github.com/blossomchi" target="_blank" class="btn-ghost">GitHub</a>
       </nav>
@@ -326,6 +326,27 @@ footer {
           </div>
         </div>
       </section>
+
+
+         <section id="bodies" class="section">
+        <h3 style="margin:0">Professional Bodies</h3>
+        <div class="two-col">
+          <div class="card">
+            <h4 style="margin-top:0">Bio</h4>
+            <p style="color:var(--muted);margin:8px 0">I’m a self-funded engineer from Nigeria focused on building AI and robotics solutions for resource-limited settings. My research interests include computer vision, reinforcement learning for robotics, full-stack development, and deployable ML systems.</p>
+            <p style="margin:8px 0;color:var(--muted)"><strong>Available for:</strong> Research collaborations, mentoring, & consulting.</p>
+          </div>
+
+          <div class="card">
+            <h4 style="margin-top:0">Skills & Tools</h4>
+            <ul class="skills" style="margin-top:10px">
+              <li>Python</li><li>PyTorch</li><li>TensorFlow</li><li>Scikit-learn</li><li>Arduino</li><li>Streamlit</li><li>Flask</li>
+            </ul>
+            <div style="margin-top:12px;color:var(--muted);font-size:13px">I supervise student projects and design hands-on bootcamps for ages 8–16.</div>
+          </div>
+        </div>
+      </section>
+
 
       <section id="contact" class="section">
         <h3 style="margin:0">Contact</h3>
