--- a/index.html
+++ b/index.html
@@ -333,32 +333,36 @@ footer {
         <section id="bodies" class="section">
   <h3 style="margin:0">Professional Bodies</h3>
   <p style="margin-top:8px;color:var(--muted);">
-    Below are some of the professional organizations I’m a member of or affiliated with.
+    Recognitions and memberships with professional organizations in AI and Cybersecurity.
   </p>
 
-  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 20px; margin-top: 18px;">
+  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(320px,1fr));gap:24px;margin-top:18px;">
     
-    <!-- NAAIP Membership -->
-    <div class="card" style="text-align:center; padding:14px;">
-      <img src="NAAIP.jpg" alt="NAAIP Membership" 
-           style="width:100%; height:220px; object-fit:cover; border-radius:10px;">
-      <h4 style="margin-top:10px;">NAAIP</h4>
-      <p style="color:var(--muted);font-size:13px;">
-        National Association of Artificial Intelligence Professionals.
+    <!-- NAAIP Certificate -->
+    <div class="card" style="text-align:center;padding:16px;">
+      <img src="NAAIP.jpg" alt="NAAIP Certificate - Chinyere Blossom Oyem"
+           style="width:100%;height:280px;object-fit:contain;border-radius:12px;border:1px solid rgba(255,255,255,0.08);">
+      <h4 style="margin-top:12px;">National Association of Artificial Intelligence Practitioners (NAAIP)</h4>
+      <p style="color:var(--muted);font-size:13px;margin-top:6px;">
+        Charter Member – Inducted on <strong>May 6, 2024</strong>.<br>
+        Certificate Number: <strong>858</strong>
       </p>
     </div>
 
-    <!-- ACSP Membership -->
-    <div class="card" style="text-align:center; padding:14px;">
-      <img src="ACSP.jpg" alt="ACSP Membership" 
-           style="width:100%; height:220px; object-fit:cover; border-radius:10px;">
-      <h4 style="margin-top:10px;">ACSP</h4>
-      <p style="color:var(--muted);font-size:13px;">
-        Association of Cyber Security Professionals.
+    <!-- ACSP Certificate -->
+    <div class="card" style="text-align:center;padding:16px;">
+      <img src="ACSP.jpg" alt="ACSP Certificate - Chinyere Blossom Oyem"
+           style="width:100%;height:280px;object-fit:contain;border-radius:12px;border:1px solid rgba(255,255,255,0.08);">
+      <h4 style="margin-top:12px;">Association of Cybersecurity Practitioners (ACSP)</h4>
+      <p style="color:var(--muted);font-size:13px;margin-top:6px;">
+        Charter Member – Inducted on <strong>August 6, 2025</strong>.<br>
+        Certificate Number: <strong>600</strong>
       </p>
     </div>
+
   </div>
 </section>
+
 
 
 
