--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@ footer {
     font-size:15px;
     border-radius:8px;
     letter-spacing:0.5px;
+    white-space: nowrap; 
+    white-space: nowrap; 
   ">
     Chinyere Blossom Oyem
   </div>
