--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ footer {
     </main>
 
     <footer>
-      <div>© <span id="year"></span> Blossom Oyem</div>
+      <div>© <span id="year"></span> Chinyere Blossom Oyem</div>
       <div class="socials">
         <a href="https://github.com/blossomchi" target="_blank">GitHub</a>
         </div>
